all updates lub bububububu

--- a/less/main.less
+++ b/less/main.less
@@ -7,6 +7,8 @@
 
 /* Base
 =============================================================== */
+@import "bootstrap";
+@import "bootstrap-responsive";
 @import "base";
 
 /* Partials 
@@ -14,3 +16,6 @@
 @import "partial/fancybox";
 @import "partial/validation-engine";
 @import "partial/colour-code";
+
+//HELPERS
+
