--- a/less/base.less
+++ b/less/base.less
@@ -34,11 +34,6 @@ a {
 	background: white;
 }
 
-
-.clearfix {
-	clear:both;
-}
-
 .navbar.navbar-fixed-top {
 	a{
 		text-transform: uppercase;
@@ -67,6 +62,7 @@ a {
 	}
 }
 
+h1.span12 { margin-bottom: 21px;}
 .container-header {
 	background: @green;
 	border: 0;
@@ -218,6 +214,7 @@ a {
 		margin-top: 20px;
 	}
 }
+@import "applicant";
 @import "feature";
 @import "guide";
 @import 'form';
