--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -231,13 +231,13 @@ body {
 }
 
 a {
-  color: #7DBE32;
+  color: #0088cc;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #4d9f1c;
+  color: #005580;
   text-decoration: underline;
 }
 
@@ -3351,17 +3351,17 @@ input[type="button"].btn-block {
 .btn-primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #7DBE32;
-  *background-color: #7DBE32;
-  background-image: -moz-linear-gradient(top, #7DBE32, rgb(107, 177, 43));
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7DBE32), to(rgb(107, 177, 43)));
-  background-image: -webkit-linear-gradient(top, #7DBE32, rgb(107, 177, 43));
-  background-image: -o-linear-gradient(top, #7DBE32, rgb(107, 177, 43));
-  background-image: linear-gradient(to bottom, #7DBE32, rgb(107, 177, 43));
+  background-color: #006dcc;
+  *background-color: #0044cc;
+  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
+  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
   background-repeat: repeat-x;
-  border-color: #7DBE32 #7DBE32 #7DBE32;
+  border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7DBE32', endColorstr='#7DBE32', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
@@ -3372,8 +3372,8 @@ input[type="button"].btn-block {
 .btn-primary.disabled,
 .btn-primary[disabled] {
   color: #ffffff;
-  background-color: rgb(107, 177, 43);
-  *background-color: #7DBE32;
+  background-color: #0044cc;
+  *background-color: #003bb3;
 }
 
 .btn-primary:active,
@@ -4360,7 +4360,7 @@ input[type="submit"].btn.btn-mini {
   overflow: visible;
 }
 
-/*.navbar-inner {
+.navbar-inner {
   min-height: 40px;
   padding-right: 20px;
   padding-left: 20px;
@@ -4380,28 +4380,8 @@ input[type="submit"].btn.btn-mini {
   -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
      -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
           box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-}*/
-.navbar-inner {
-  min-height: 40px; 
-  padding-right: 20px;
-  padding-left: 20px;
-  background-color: #fafafa;
-  background-image: -moz-linear-gradient(top, #202020, #111111);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#202020), to(#111111));
-  background-image: -webkit-linear-gradient(top, #202020, #111111);
-  background-image: -o-linear-gradient(top, #202020, #111111);
-  background-image: linear-gradient(to bottom, #202020, #111111);
-  background-repeat: repeat-x;
-  /*border: 1px solid #d4d4d4;*/
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
-  *zoom: 1;
-  /*-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);*/
 }
+
 .navbar-inner:before,
 .navbar-inner:after {
   display: table;
@@ -4456,8 +4436,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .divider-vertical {
   height: 40px;
   margin: 0 9px;
-  border-right-color: #222222;
-  border-left-color: #111111;
+  border-right: 1px solid #ffffff;
+  border-left: 1px solid #f2f2f2;
 }
 
 .navbar .btn,
@@ -4623,13 +4603,10 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a {
   float: none;
-  padding: 15px 15px 15px;
-  /*color: #777777;*/
+  padding: 10px 15px 10px;
+  color: #777777;
   text-decoration: none;
-  -webkit-transition: background ease-in 0.1s, border ease-in 0.1s, color ease-in 0.1s;
-  -moz-transition: background ease-in 0.1s, border ease-in 0.1s, color ease-in 0.1s;
-  transition: background ease-in 0.1s, border ease-in 0.1s, color ease-in 0.1s;
-  /*text-shadow: 0 1px 0 #252525;*/
+  text-shadow: 0 1px 0 #ffffff;
 }
 
 .navbar .nav .dropdown-toggle .caret {
@@ -4638,22 +4615,20 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  color: #fff;
+  color: #333333;
   text-decoration: none;
-  background-color: #7DBE32;
+  background-color: transparent;
 }
 
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
-.navbar .nav > .active > a:focus,
-.navbar .nav > li > a:active {
-  color: #fff;
+.navbar .nav > .active > a:focus {
+  color: #555555;
   text-decoration: none;
-  background-color: #7DBE32;
-  -webkit-box-shadow: inset 0px 0px 22px 2px #333333;
-     -moz-box-shadow: inset 0px 0px 22px 2px #333333;
-          box-shadow: inset 0px 0px 22px 2px #333333;
-  /*background-color: #111111;*/
+  background-color: #e5e5e5;
+  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+     -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+          box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 }
 
 .navbar .btn-navbar {
@@ -4761,8 +4736,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  color: #ffffff;
-  background-color: #7DBE32;
+  color: #555555;
+  background-color: #e5e5e5;
 }
 
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
