--- a/public/css/home.css
+++ b/public/css/home.css
@@ -29,7 +29,7 @@
   margin-top: 10px;
 }
 #home #job-search {
-  border: 5px solid #00aeef;
+  border: 5px solid #7dbe32;
   border-top: 0;
   padding-bottom: 10px;
 }
