--- a/less/applicant.less
+++ b/less/applicant.less
@@ -2,67 +2,72 @@
 =================================================================== */
 	
 
-
-#profile-basic {
-	input[type=text] { width: 245px;}
-	select { width: 259px;}
-}
-#profile-slug {
-	input[type=text] { width: 104px;}
-}
-#profile-photo {
-
-	float: right;
-
-	img {
-		max-width: inherit !important;
+.applicant {
+	
+	
+	#profile-basic {
+		input[type=text] { width: 245px;}
+		select { width: 259px;}
 	}
+	#profile-slug {
+		input[type=text] { width: 104px;}
+	}
+	#profile-photo {
 
-	#current-photo {
-		float: left;
+		float: right;
 
-		#photo { 
-			
-			position: relative;
-			.size(150px, 150px);
-			overflow: hidden;
+		img {
+			max-width: inherit !important;
+		}
 
-			img {
+		#current-photo {
+			float: left;
+
+			#photo { 
+
+				position: relative;
 				.size(150px, 150px);
 				overflow: hidden;
+
+				img {
+					.size(150px, 150px);
+					overflow: hidden;
+				}
+
+				#photo-edit-btn {
+					position: absolute;
+					bottom: 0;
+					background: url(/img/opac-bg.png);
+					width: 150px;
+					text-align: center;
+					color: #fff;
+					a { color: #fff; }
+				}	
 			}
 
-			#photo-edit-btn {
-				position: absolute;
-				bottom: 0;
-				background: url(/img/opac-bg.png);
-				width: 150px;
-				text-align: center;
-				color: #fff;
-				a { color: #fff; }
-			}	
+			#upload-profile-pic { display: none; }
+
+			p {
+				margin-top: 3px;
+				line-height: 18px;
+			}			
 		}
 
-		#upload-profile-pic { display: none; }
+		#edit-photo {
 
-		p {
-			margin-top: 3px;
-			line-height: 18px;
-		}			
-	}
+			#crop-profile-pic-btn {
+				display: none;
 
-	#edit-photo {
-
-		#crop-profile-pic-btn {
-			display: none;
+			}
 
 		}
-
 	}
+	.accordion-inner { overflow: hidden; }
+	.accordion-group { margin-bottom: 21px; }
 
 }
 
-#qualifications-field, #workhistory-field {
+/*#qualifications-field, #workhistory-field {
 
 	.hide { display: none; }
 	.open { display: list-item; }
@@ -91,7 +96,7 @@
 			border: 0;
 		}
 	}
-}
+}*/
 
 button.remove { display: none; }
 
@@ -126,14 +131,17 @@ button.remove { display: none; }
 
 /* Large desktop */
 @media (min-width: 1200px) {
+	.applicant {
+	
+		#profile-basic {
+			input[type=text] { width: 412px;}
+			select {width: 426px;}
+		}
 
-	#profile-basic {
-		input[type=text] { width: 412px;}
-		select {width: 426px;}
-	}
-
-	#profile-slug {
-		input[type=text] { width: 269px;}
+		#profile-slug {
+			input[type=text] { width: 269px;}
+		}
+		
 	}
 }
  
@@ -146,36 +154,39 @@ button.remove { display: none; }
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) { 
 	.applicant label { display: block;}
-	#profile-photo {
-		float: none;
-		overflow: hidden;
-	}
-	#profile-basic {
-		input[type=text] { width: 100%;}
-		select {width: 103%;}
-	}
+	.applicant {
+		#profile-photo {
+			float: none;
+			overflow: hidden;
+		}
+		#profile-basic {
+			input[type=text] { width: 100%;}
+			select {width: 103%;}
+		}
 
-	#profile-slug {
-		clear: both;
-		display: block;
-		input[type=text] { width: 30%;}
+		#profile-slug {
+			clear: both;
+			display: block;
+			input[type=text] { width: 30%;}
+		}
 	}
 }
  
 /* Landscape phones and down */
 @media (max-width: 480px) { 
-
-	#profile-photo {
-		float: none;
-		overflow: hidden;
-	}
-	#profile-basic {
-		input[type=text] { width: 100%;}
-		select {width: 105%;}
-	}
-	#profile-slug {
-		clear: both;
-		display: block;
-		input[type=text] { width: 30%;}
+	.applicant {
+		#profile-photo {
+			float: none;
+			overflow: hidden;
+		}
+		#profile-basic {
+			input[type=text] { width: 100%;}
+			select {width: 105%;}
+		}
+		#profile-slug {
+			clear: both;
+			display: block;
+			input[type=text] { width: 30%;}
+		}
 	}
 }
