--- a/less/applicant.less
+++ b/less/applicant.less
@@ -63,42 +63,28 @@
 		}
 	}
 	.accordion-inner { overflow: hidden; }
-	.accordion-group { margin-bottom: 21px; }
+	.accordion-group { 
+		
+		background: white;
+		border-color: #dadada;
+		.border-radius(0);
+		margin-bottom: 21px; 
+
+		form > div { 
+			border: 0;
+			padding: 0;
+			position: relative;
+		}
+
+		.controls {
+
+			position: absolute;
+			right: 0;
+			top: 0;
+		}
+	}
 
 }
-
-/*#qualifications-field, #workhistory-field {
-
-	.hide { display: none; }
-	.open { display: list-item; }
-
-	.qualifications-field-child, .workhistory-field-child {
-		padding: 10px;
-
-		&:hover {
-			background: #f0f0f0;
-		}
-	}
-
-	ol {
-		border-bottom: 1px solid #ddd;
-		margin-bottom: 10px;
-		margin-right: 0;
-		padding: 10px 0;		
-	}
-
-	li {
-		textarea {
-			.size(95%, 150px)
-		}
-
-		.add-qualification, .add-workhistory {
-			border: 0;
-		}
-	}
-}*/
-
-button.remove { display: none; }
 
 #resume-file, #coverletter-file { display: none; }
 
