--- a/less/base.less
+++ b/less/base.less
@@ -11,7 +11,7 @@
 //@import 'partial/colour-code.less';
 
 body {
-	
+	#gradient .vertical (#ddd, #fff);
 	.font-normal();
 	// // background: -moz-linear-gradient(top,  rgba(11,103,205,0) 0%, rgba(11,103,205,0.28) 49%, rgba(13,105,206,0.29) 50%, rgba(125,185,232,0) 100%); /* FF3.6+ */
 	// // background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(11,103,205,0)), color-stop(49%,rgba(11,103,205,0.28)), color-stop(50%,rgba(13,105,206,0.29)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
@@ -25,14 +25,10 @@ body {
 @import 'shadow';
 
 a {
-	&:hover {
-		text-decoration: none;
-	}
+	&:hover { text-decoration: none; }
 }
-
-.white-bg {
-	background: white;
-}
+.hidden { display:none; }
+.white-bg { background: white; }
 
 .navbar.navbar-fixed-top {
 	a{
