--- a/public/css/main.css
+++ b/public/css/main.css
@@ -211,7 +211,7 @@ body {
   background-color: white;
 }
 a {
-  color: #7dbe32;
+  color: #acd640;
   text-decoration: none;
 }
 a:hover,
@@ -3982,7 +3982,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  color: #7dbe32;
+  color: #acd640;
   text-decoration: none;
   background-color: transparent;
 }
@@ -3991,7 +3991,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:focus {
   color: white;
   text-decoration: none;
-  background-color: #7dbe32;
+  background-color: #acd640;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
@@ -6520,7 +6520,7 @@ h1.span12 {
   margin-bottom: 21px;
 }
 .container-header {
-  background: #7dbe32;
+  background: #acd640;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
   clear: both;
@@ -6870,7 +6870,7 @@ body #top-search-filter #job-sub-location {
   margin-left: 20px;
 }
 body #top-search-filter .span12 {
-  border: 5px solid #7dbe32;
+  border: 5px solid #acd640;
   border-top: 0;
   margin-top: 150px;
   padding-bottom: 10px;
@@ -6892,7 +6892,7 @@ body #top-search-filter .span12.affix-top {
 }
 body #pull-down {
   background: white;
-  border: 5px solid #7dbe32;
+  border: 5px solid #acd640;
   border-top: 0;
   bottom: -40px;
   cursor: pointer;
@@ -6909,7 +6909,7 @@ body #pull-down {
 body #side-feature,
 body #side-feature-mobile {
   clear: both;
-  background: #7dbe32;
+  background: #acd640;
   padding: 5px 0 5px 0;
   -webkit-box-shadow: 0px 5px 15px -4px #222222;
   -moz-box-shadow: 0px 5px 15px -4px #222222;
@@ -6937,7 +6937,7 @@ body #side-feature-mobile a {
 }
 body #side-feature a:hover,
 body #side-feature-mobile a:hover {
-  color: #7dbe32;
+  color: #acd640;
   text-decoration: none;
 }
 body #aside-mobile {
@@ -7436,7 +7436,7 @@ form input {
   font-size: 13px;
   list-style: none;
   padding: 27px 20px;
-  border: 1px solid #7dbe32;
+  border: 1px solid #acd640;
   margin-bottom: 21px;
   clear: both;
 }
@@ -7465,7 +7465,7 @@ form input {
 }
 #content #job-listing .shortlist-tag {
   display: none;
-  background: #7dbe32;
+  background: #acd640;
   height: 40px;
   width: 36px;
   position: absolute;
@@ -7487,7 +7487,7 @@ form input {
   height: 0;
   border-left: 18px solid transparent;
   border-right: 18px solid transparent;
-  border-top: 5px solid #7dbe32;
+  border-top: 5px solid #acd640;
   position: absolute;
   bottom: -5px;
 }
@@ -7507,7 +7507,7 @@ form input {
   padding-right: 15px;
 }
 #content #job-listing .main-info h2 a:hover {
-  color: #7dbe32;
+  color: #acd640;
 }
 #content #job-listing .main-info p > a {
   color: #333333;
@@ -7616,7 +7616,7 @@ form input {
 }
 #content #feature-listing,
 #content #feature-listing-mobile {
-  background: #7dbe32;
+  background: #acd640;
   border-left: 1px solid #e4e4e4;
   border-right: 1px solid #e4e4e4;
   margin-top: 10px;
