--- a/less/form.less
+++ b/less/form.less
@@ -1,6 +1,8 @@
 /* =FORMS STYLES 
 =================================================================== */
-.validate-form, .form {
+.modal { padding : 0 !important;}
+
+.validate-form , .form {
 	h4 {
 		.font-normal();
 		margin-bottom: 21px;
@@ -59,6 +61,8 @@
 
 	&#job-apply div { border: 0; }
 }
+
+
 
 	
 .form-signin {
