--- a/less/mixins/settings.less
+++ b/less/mixins/settings.less
@@ -37,7 +37,7 @@
 @gray-dark: #b7b7b7;
 @gray-darker: #444;
 @blue: #00AEEF;
-@green: rgb(172, 214, 64);
+@green: #0079c1;
 @dark-green: #4d9f1c;
 
 @button-blue: #0079c1;
