--- a/less/applicant.less
+++ b/less/applicant.less
@@ -104,6 +104,21 @@
 			.controls { width: 10%;}
 		}
 	}
+
+	#employment-list {
+		ul {
+			margin: 0;
+			li {
+				list-style: none;
+
+				+ li {
+					border-top: 1px solid #ddd;
+				}
+
+				button { margin-left: 5px;}
+			}
+		}
+	}
 	
 }
 
@@ -114,20 +129,18 @@
 }
 
 #expertise {
-	text-align: center;
-	width: 100%;
-	span {
-		.border-radius(@radius:15px);
-		height: 14px;
-		line-height: 14px;
-		.inline-block();
-		font-size: 12px;
-		margin: 5px 5px 5px 0;
-		white-space: nowrap;
-		background-color: #0066bd;
-		color: #FFF;
-		padding: 3px 8px;    
+	
+	table { 
+		margin-top: 21px;
+		width: 100%; 
+		.controls { 
+			text-align: right;
+			width: 60px; 
+		}
+		th { text-align: left; }
+		td { padding: 5px 0; }
 	}
+	
 }
 
 .box-form-layout {
