--- a/public/css/main.css
+++ b/public/css/main.css
@@ -211,7 +211,7 @@ body {
   background-color: white;
 }
 a {
-  color: #acd640;
+  color: #0079c1;
   text-decoration: none;
 }
 a:hover,
@@ -3995,7 +3995,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  color: #acd640;
+  color: #0079c1;
   text-decoration: none;
   background-color: transparent;
 }
@@ -4004,7 +4004,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > .active > a:focus {
   color: white;
   text-decoration: none;
-  background-color: #acd640;
+  background-color: #0079c1;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
@@ -6533,7 +6533,7 @@ h1.span12 {
   margin-bottom: 21px;
 }
 .container-header {
-  background: #acd640;
+  background: #0079c1;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
   clear: both;
@@ -6739,7 +6739,7 @@ h1.span12 {
   width: 100%;
 }
 .applicant #qualification-list table th {
-  background: #7dbe32;
+  background: #0079c1;
   color: white;
   font-weight: normal;
   padding: 5px;
@@ -6766,6 +6766,18 @@ h1.span12 {
 .applicant #qualification-list table .controls {
   width: 10%;
 }
+.applicant #employment-list ul {
+  margin: 0;
+}
+.applicant #employment-list ul li {
+  list-style: none;
+}
+.applicant #employment-list ul li + li {
+  border-top: 1px solid #dddddd;
+}
+.applicant #employment-list ul li button {
+  margin-left: 5px;
+}
 #resume-file,
 #coverletter-file {
   display: none;
@@ -6773,27 +6785,19 @@ h1.span12 {
 #profile-progress {
   height: 273px;
 }
-#expertise {
-  text-align: center;
+#expertise table {
+  margin-top: 21px;
   width: 100%;
 }
-#expertise span {
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  height: 14px;
-  line-height: 14px;
-  display: inline-block;
-  font-size: 12px;
-  margin: 5px 5px 5px 0;
-  white-space: nowrap;
-  background-color: #0066bd;
-  color: white;
-  padding: 3px 8px;
+#expertise table .controls {
+  text-align: right;
+  width: 60px;
 }
-.ie7 #expertise span {
-  display: inline;
-  zoom: 1;
+#expertise table th {
+  text-align: left;
+}
+#expertise table td {
+  padding: 5px 0;
 }
 .box-form-layout {
   -moz-box-sizing: border-box;
@@ -6916,7 +6920,7 @@ body #top-search-filter #job-sub-location {
   margin-left: 20px;
 }
 body #top-search-filter .span12 {
-  border: 5px solid #acd640;
+  border: 5px solid #0079c1;
   border-top: 0;
   margin-top: 150px;
   padding-bottom: 10px;
@@ -6938,7 +6942,7 @@ body #top-search-filter .span12.affix-top {
 }
 body #pull-down {
   background: white;
-  border: 5px solid #acd640;
+  border: 5px solid #0079c1;
   border-top: 0;
   bottom: -40px;
   cursor: pointer;
@@ -6955,7 +6959,7 @@ body #pull-down {
 body #side-feature,
 body #side-feature-mobile {
   clear: both;
-  background: #acd640;
+  background: #0079c1;
   padding: 5px 0 5px 0;
   -webkit-box-shadow: 0px 5px 15px -4px #222222;
   -moz-box-shadow: 0px 5px 15px -4px #222222;
@@ -6983,7 +6987,7 @@ body #side-feature-mobile a {
 }
 body #side-feature a:hover,
 body #side-feature-mobile a:hover {
-  color: #acd640;
+  color: #0079c1;
   text-decoration: none;
 }
 body #aside-mobile {
@@ -7237,6 +7241,9 @@ form input {
 /* =FORMS STYLES 
 =================================================================== */
 
+.modal {
+  padding: 0 !important;
+}
 .validate-form h4,
 .form h4 {
   font-family: 'Arial', sans-serif;
@@ -7482,7 +7489,7 @@ form input {
   font-size: 13px;
   list-style: none;
   padding: 27px 20px;
-  border: 1px solid #acd640;
+  border: 1px solid #0079c1;
   margin-bottom: 21px;
   clear: both;
 }
@@ -7511,7 +7518,7 @@ form input {
 }
 #content #job-listing .shortlist-tag {
   display: none;
-  background: #acd640;
+  background: #0079c1;
   height: 40px;
   width: 36px;
   position: absolute;
@@ -7533,7 +7540,7 @@ form input {
   height: 0;
   border-left: 18px solid transparent;
   border-right: 18px solid transparent;
-  border-top: 5px solid #acd640;
+  border-top: 5px solid #0079c1;
   position: absolute;
   bottom: -5px;
 }
@@ -7553,7 +7560,7 @@ form input {
   padding-right: 15px;
 }
 #content #job-listing .main-info h2 a:hover {
-  color: #acd640;
+  color: #0079c1;
 }
 #content #job-listing .main-info p > a {
   color: #333333;
@@ -7662,7 +7669,7 @@ form input {
 }
 #content #feature-listing,
 #content #feature-listing-mobile {
-  background: #acd640;
+  background: #0079c1;
   border-left: 1px solid #e4e4e4;
   border-right: 1px solid #e4e4e4;
   margin-top: 10px;
