--- a/less/listing.less
+++ b/less/listing.less
@@ -148,7 +148,7 @@
 	#document-listing, #resume-listing, #coverletter-listing  {
 		margin-top: 25px;
 		margin-right: 0;
-		width: 90%;
+		//width: 90%;
 
 		> .item {
 			clear: both;
@@ -159,17 +159,17 @@
 			padding-left: 0px;
 
 			> .title { 
-				width: 40%;
+				width: 60%;
 				float: left;
 				margin: 0px;
 			}
 
 			> .date-upload { 
-				width: 25%;
+				width: 15%;
 			}
 
 			> .filesize {
-				width: 25%;
+				width: 15%;
 			}
 
 			a {
@@ -177,7 +177,8 @@
 					float: right;
 					display: block;
 					.size(22px, 22px);
-					//background: url('@{dir-icons}/icon-document-22x22.png') no-repeat;
+					
+					margin-right: 5px;
 				}	
 				> .doc, > .docx { background-image: url('/img/icon-doc.png'); }
 				> .pdf 			{ background-image: url('/img/icon-pdf.png'); }							
