finish of applicant

--- a/less/applicant.less
+++ b/less/applicant.less
@@ -169,6 +169,7 @@
 @media (min-width: 768px) and (max-width: 979px) { 
 
 	.applicant .span9 { width: 100%;}
+	.applicant .span3 { width: 100%;}
 }
  
 /* Landscape phone to portrait tablet */
