--- a/less/main.less
+++ b/less/main.less
@@ -16,6 +16,7 @@
 @import "partial/fancybox";
 @import "partial/validation-engine";
 @import "partial/colour-code";
+@import "partial/switch";
 
 //HELPERS
 
