--- a/less/base.less
+++ b/less/base.less
@@ -147,7 +147,7 @@ h1.span12 { margin-bottom: 21px;}
 		p { 
 			font-family: Arial, Helvetica, sans-serif;
 			margin: 0;	
-			margin-bottom:6px;
+			//margin-bottom:6px;
 		}
 		ul {
 			margin-left:20px;
