--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -4751,8 +4751,10 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  color: #555555;
-  background-color: #e5e5e5;
+  color: #fff;
+  background-color: @button-blue;
+
+
 }
 
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
