--- a/less/templating.less
+++ b/less/templating.less
@@ -1,14 +1,12 @@
 #toolbar {
-	float: right;
+/*	float: right;
 	height: 100%;
-	position: fixed;
-	right: 0;
-	top: 74px;
-	.transition(.5s);
+	
+	.transition(.5s);*/
 }
 
 #custom-template {
-	background: #252525;
+/*	background: #252525;
 	border-bottom: 1px solid #bebebe;
 	border-left: 1px solid #bebebe;
 	color: #333333;
@@ -38,12 +36,12 @@
 		color: #4c4c4c;
 		font-size: 14px;
 		line-height: 28px;
-	}
+	}*/
 }
 
 
 #custom-templating {
-	font-size: 12px;
+/*	font-size: 12px;
 	.font-normal();
 	width: 100%;
 	
@@ -61,9 +59,9 @@
 				background: #0b67cd;
 			}
 		}
-	}
+	}*/
 
-	ol {
+/*	ol {
 		margin-right: 0;
 		overflow: hidden;
 		width: 346px;
@@ -166,23 +164,23 @@
 
 
 		}
-	}
+	}*/
 }
 
 
 #template-listing {
-	li {
+/*	li {
 		+ li {
 			border-top: 1px solid #ccc;
 		}
-	}
+	}*/
 }
 
-#custom-template .viewport { width: 100%; height: 100%; overflow: hidden; position: relative; }
+/*#custom-template .viewport { width: 100%; height: 100%; overflow: hidden; position: relative; }
 #custom-template .overview { list-style: none; position: absolute; left: 0; top: 0; padding: 0; margin: 0; width: 100%;}
 #custom-template .scrollbar{ background: transparent url(../img/bg-scrollbar-track-y.png) no-repeat 0 0; position: relative; background-position: 0 0; float: left; width: 5px; }
 #custom-template .track { background: #f0f0f0 url(../img/bg-scrollbar-trackend-y.png) no-repeat 0 100%; height: 100%; width:13px; position: relative; padding: 0 1px; }
 #custom-template .thumb { background: transparent url(../img/bg-scrollbar-thumb-y.png) no-repeat 50% 100%; height: 20px; width: 15px; cursor: pointer; overflow: hidden; position: absolute; top: 0; left: -5px; }
 #custom-template .thumb .end { background: transparent url(../img/bg-scrollbar-thumb-y.png) no-repeat 50% 0; overflow: hidden; height: 5px; width: 25px; }
 #custom-template .disable { display: none; }
-.noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }
+.noSelect { user-select: none; -o-user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; }*/
