--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -2960,12 +2960,7 @@ table th[class*="span"],
 .dropdown-submenu:focus > a {
   color: #ffffff;
   text-decoration: none;
-  background-color: #0081c2;
-  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+ .button-background();
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
 }
@@ -3354,13 +3349,7 @@ input[type="button"].btn-block {
 line-height: 1.4545em;
 text-shadow: 0 -1px #00629c;
 text-align: center;
-background-color: #0079c1;
-background: -moz-linear-gradient(center bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
-background: -webkit-gradient(linear,left bottom,left top,color-stop(0%,#0079c1),color-stop(20%,#0079c1),color-stop(100%,#00a1ff));
-background: -webkit-linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
-background: -ms-linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
-background: -o-linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
-background: linear-gradient(bottom,#0079c1 0,#0079c1 20%,#00a1ff 100%);
+.button-background();
 -moz-box-shadow: 0 1px #4dbeff inset;
 -webkit-box-shadow: 0 1px #4dbeff inset;
 box-shadow: 0 1px #4dbeff inset;
@@ -4638,7 +4627,7 @@ input[type="submit"].btn.btn-mini {
 {
   color: #fff;
   text-decoration: none;
-  background-color: @green;
+ .button-background();
  -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
      -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
           box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
@@ -4752,7 +4741,7 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
   color: #fff;
-  background-color: @button-blue;
+  .button-background();
 
 
 }
