--- a/less/main.less
+++ b/less/main.less
@@ -10,7 +10,7 @@
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "base";
-
+@import "employer";
 /* Partials 
 ================================================================ */
 @import "partial/fancybox";
