--- a/less/mixins/font.less
+++ b/less/mixins/font.less
@@ -12,3 +12,18 @@
 	font-family: 'Arial', sans-serif;
 	font-weight: 600;
 }
+
+.open-sans-light() {
+	font-family: 'Open Sans', sans-serif;
+	font-weight:300;
+}
+
+.open-sans-semibold() {
+	font-family: 'Open Sans', sans-serif;
+	font-weight:600;
+}
+
+.open-sans-normal() {
+	font-family: 'Open Sans', sans-serif;
+	font-weight:400;
+}
